@@ -100,8 +100,8 @@
             <setting name="ColorOwnProcesses" serializeAs="String">
                 <value>255, 255, 170</value>
             </setting>
-            <setting name="ColorHighlight" serializeAs="String">
-                <value>255, 85, 85</value>
+            <setting name="ColorElevatedProcesses" serializeAs="String">
+                <value>255, 170, 102</value>
             </setting>
             <setting name="ColorSystemProcesses" serializeAs="String">
                 <value>170, 204, 255</value>
